# acuratex-fast-control

./: .gitignore  DOCUMENTACION_CAMBIO_YARN_STITCH_VISUAL.md  SESION_REINICIO.md
UsbSmokeIdf/: CMakeLists.txt  flash_monitor_com10.bat  monitor_com10.bat  partitions.csv  sdkconfig  sdkconfig.defaults
UsbSmokeIdf/main/: CMakeLists.txt  app_rtos_types.h  can_driver_twai.cpp  can_driver_twai.h  command_head_program_runner.cpp  command_head_program_runner.h  command_ingress_queue.cpp  command_ingress_queue.h  command_processor.cpp  command_processor.h  file_transfer.cpp  file_transfer.h  head_command_profile.h  head_fast_diag.cpp  head_fast_diag.h  head_program_1_commands.cpp  head_program_1_commands.h  head_program_2_commands.cpp  head_program_2_commands.h  head_program_runtime.cpp  head_program_runtime.h  head_runtime.cpp  head_runtime.h  head_state_manager.cpp  head_state_manager.h  idf_component.yml  line_codec.cpp  line_codec.h  network_discovery.cpp  network_discovery.h  reply_dispatcher.cpp  reply_dispatcher.h  tcp_server.cpp  tcp_server.h  usb_smoketest_main.cpp  wifi_manager.cpp  wifi_manager.h
app_windows/: Directory.Build.props
docs/: ARQUITECTURA_RAPIDA.md  AUDITORIA_APP_COMANDOS_COMPLETA_2026-06-28.md  AUDITORIA_FIRMWARE_PROGRAMAS_2026-06-28.md  ESTADO_FASE_RAPIDA.md  MAPA_ARDUINO_FIRMWARE.md  MAPA_HTML_APP.md  PRUEBAS_FISICAS.md  (+3 more)
nf-acuratex-usb/native/AcuratexUsb/: CMakeLists.txt  acuratex_usb_bridge.cpp  acuratex_usb_bridge.h  acuratex_usb_descriptors.c  acuratex_usb_descriptors.h  acuratex_usb_driver.cpp  acuratex_usb_driver.h  acuratex_usb_interop.cpp
(+137 files in other folders)
